@@ -3,6 +3,8 @@ AUX buildbot.initd-r1 1230 RMD160 16a9fc902f09d5c73d68df8970e7491af9002594 SHA1 
 AUX buildmaster.confd 218 RMD160 a8f6893aa83c0c169f493104e1c6f023ec45f787 SHA1 8dc5e868092a8ea90c0cec5650ba85e412295968 SHA256 bb7f93e3867b32a25e2445a66d40573fa5073a80e73e35ae2a904db715f870c6
 AUX buildslave.confd 215 RMD160 ffe7545a43c10a9f3e9798f23ba6a32ab47c137b SHA1 8c57893b6ef370a98f4af552d91e1b702b89abd6 SHA256 5d0ab58d0808ccfa2d594b22047dfca9167c855ff749d34523177cefb307f76a
 DIST buildbot-0.7.11p3.tar.gz 1019706 RMD160 5fc1d9e1c32127109f58ea727cae2e6266b16fb9 SHA1 3c0fc8bbdb2db92450d7294da11fc40979e94e63 SHA256 5bc20a29e761c3eb191c8d7b36ef10929f7c371c50dfeeec426ce3589c8ce740
+DIST buildbot-0.7.12.tar.gz 1296550 RMD160 b7c9ad263690708bbf1abadaa0b4bb78de4abd50 SHA1 76e2278cd8cb56dba99086fdcc0400f8fea5079f SHA256 56c38c77a679f380782635ed763744ecaa2c75f8741153b561b7a2cf0577e1be
 EBUILD buildbot-0.7.11_p3.ebuild 3162 RMD160 2d479d5c5ffb415ac151ebbec2ef3aac345307ad SHA1 1e24fa10ac717ff53f7c54c853643f0a20fecd5e SHA256 26d025d3d71a995439c87f26c39f7383b5a2eb4b9cba59a135d748e60c833277
-MISC ChangeLog 7418 RMD160 f18568c2f13d990249c31a9f9505af7a6d7538b4 SHA1 c94f64fc019ebefc4799585e80d2537c26cd48e6 SHA256 8f4a156562647d54941421501ccbdcf57264fb9030b7876c7c35e69c960034ce
+EBUILD buildbot-0.7.12.ebuild 3116 RMD160 09db513e3b7ced8b32cc4d064d6a1faef34e51df SHA1 e299183dbba498238ffbd8fe34377a63936aaa6f SHA256 1d81985d2ed32658349b70c2f84902574e7a711f82323fabd39a5479b6a8d37a
+MISC ChangeLog 7677 RMD160 5513aba9b2f1d46e408479878a8a6248041e2018 SHA1 8352538f95598eedfa0bdb1fcdf4421a9e9404c2 SHA256 89034f81596fcaf3605865a2f7add1e5c2a832cbd5d3000048b8fb797aeeb78a
 MISC metadata.xml 1292 RMD160 87e781b71385afcd20ae84320394fecf27fee917 SHA1 66be097e7db1e17218cf906f4876bda684d779bf SHA256 24c59ac7a6f85e11cd776e636b8e9ebd95350acdd0a3329ad4d584d294b6523a
